[project]
name = "nepenthes-lambda"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "requests",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "moto[cloudwatch]",
    "boto3",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]
